# custom-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  INSTRUCTIONS.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  biome.json  package.json  project-template.manifest.yaml  pyproject.toml  skills-lock.json  tsconfig.json
.beads/: PRIME.md  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.github/: CODE_REVIEW.md  copilot-instructions.md
.standards/: active-profile.yaml  ai-command-behavior.ai.yaml  ai-response-navigation.ai.yaml  anti-hallucination.md  change-batching-standards.ai.yaml  changelog-standards.md  checkin-standards.md  circuit-breaker.ai.yaml  code-review-checklist.md  containerization-standards.ai.yaml  context-aware-loading.ai.yaml  deprecation-standards.ai.yaml  design-document-standards.ai.yaml  developer-memory.ai.yaml  documentation-structure.ai.yaml  documentation-structure.md  documentation-writing-standards.ai.yaml  documentation-writing-standards.md  environment-standards.ai.yaml  error-code-standards.md  execution-history.ai.yaml  feature-flag-standards.ai.yaml  file-placement-guide.md  forward-derivation-standards.ai.yaml  frontend-design-standards.ai.yaml  health-check-standards.ai.yaml  immutability-first.ai.yaml  logging-standards.md  manifest.json  observability-standards.ai.yaml  privacy-standards.ai.yaml  project-structure.md  recovery-recipe-registry.ai.yaml  refactoring-standards.ai.yaml  requirement-checklist.md  requirement-template.md  retry-standards.ai.yaml  security-standards.ai.yaml  skill-standard-alignment-check.ai.yaml  slo-standards.ai.yaml  (+9 more)
docs/: AI輔助開發的本質原理.md  AI開發環境設定指南.md  Skill-Command-Agent差異說明.md  ai-dev命令分類與設計壓力參考.md  ai-dev指令與資料流參考.md  copy-architecture.md  skills-inventory.md  v1-v2-parity-report.md  跨平台開發設定指南.md
message/: 2026-01-24-command-messageopenspecapplycommand-message.txt
openspec/: config.yaml  project.md
project-template/: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  INSTRUCTIONS.md
script/: README.md  __init__.py  main.py
src/: cli.ts
tests/: test_agy_target.py  test_ai_dev_command_reference.py  test_auto_skill_projection.py  test_auto_skill_state.py  test_clone_command.py  test_paths.py  (+41 more)
(+1355 files in other folders)
