[project]
name = "ai-dev"
version = "1.1.3"
description = "AI Development Environment Setup CLI - 統一管理 Skills、Commands 與 Agent 配置"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "ValorVie" }
]
keywords = ["ai", "development", "cli", "skills", "claude-code", "openspec"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "textual>=0.89.0",
]

[project.scripts]
ai-dev = "script.main:app"

[tool.setuptools.packages.find]
include = ["script*"]

[tool.setuptools.package-data]
"*" = ["*.tcss"]

[tool.uv]
dev-dependencies = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
